--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@firebase/app-types": "^0.9.3",
+    "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
+    "firebase-functions": "^6.3.2",
+    "nuxt-vuefire": "1.0.5",
+    "vuefire": ">=3.2.1",
     "@nuxt/icon": "1.12.0",
+    "@nuxt/ui": "2",
     "@nuxtjs/color-mode": "3.5.2",
     "@nuxtjs/tailwindcss": "6.13.2",
+    "autoprefixer": "^10.4.21",
     "nuxt": "^3.16.2",
+    "postcss": "^8.5.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   }
