--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@firebase/app-types": "^0.9.3",
     "@nuxt/icon": "1.12.0",
     "@nuxt/ui": "2",
